--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     </div>
     <div class="pto">
         <div class="vacation">
-            <h2>Vacation: <span class="vaca-days"></span></h2>
+            <h2>Vacation: <span class="vaca-days">14</span></h2>
         </div>
         <div class="floaters">
-            <h2>Floaters: <span class="float-days"></span></h2>
+            <h2>Floaters: <span class="float-days">4</span></h2>
         </div>
         <div class="sick">
-            <h2>Sick: <span class="sick-days"></span></h2>
+            <h2>Sick: <span class="sick-days">7</span></h2>
         </div>
     </div>
     <div class="unpaid">
-        <h2>FMLA: <span class="fmla"></span></h2>
+        <h2>FMLA: <span class="fmla">60</span></h2>
     </div>
     <div class="buttons">
         <button class="take-vaca button">Take Vacation</button>
