--- a/index.html
+++ b/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PTO/Sick/FMLA</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="./scripts/script.js" defer></script>
-</head>
-<body>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
     <div class="heading">
-        <h1>PTO and Sick days at work.</h1>
+      <h1>PTO and Sick days at work.</h1>
     </div>
     <div class="pto">
-        <div class="vacation">
-            <h2>Vacation: <span class="vaca-days">14</span></h2>
-        </div>
-        <div class="floaters">
-            <h2>Floaters: <span class="float-days">4</span></h2>
-        </div>
-        <div class="sick">
-            <h2>Sick: <span class="sick-days">7</span></h2>
-        </div>
+      <div class="vacation">
+        <h2>Vacation: <span class="vaca-days">14</span></h2>
+      </div>
+      <div class="floaters">
+        <h2>Floaters: <span class="float-days">4</span></h2>
+      </div>
+      <div class="sick">
+        <h2>Sick: <span class="sick-days">7</span></h2>
+      </div>
     </div>
     <div class="unpaid">
-        <h2>FMLA: <span class="fmla">60</span></h2>
+      <h2>FMLA: <span class="fmla">60</span></h2>
     </div>
     <div class="buttons">
-        <button class="take-vaca button">Take Vacation</button>
-        <button class="take-float button">Take Floater</button>
-        <button class="take-sick button">Take Sick</button>
-        <button class="take-fmla button">Take FMLA</button>
-</body>
+      <button class="take-vaca button">Take Vacation</button>
+      <button class="take-float button">Take Floater</button>
+      <button class="take-sick button">Take Sick</button>
+      <button class="take-fmla button">Take FMLA</button>
+    </div>
+    <script src="./scripts/script.js"></script>
+  </body>
 </html>
